--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -2414,7 +2414,9 @@ This file will be replaced on any new update of EmuELEC-->
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
-      			</system>
+      		
+		</emulators>
+	</system>
 	<system>
 		<name>pspcrashhd</name>
 		<fullname>Sony Playstation Portable</fullname>
@@ -2427,11 +2429,13 @@ This file will be replaced on any new update of EmuELEC-->
 		<platform>psp</platform>
 		<theme>pspcrashhd</theme>
 		<emulators>
-       		<emulator name="PPSSPPSDLLZ">
+			<emulator name="PPSSPPSDLLZ">
         <cores>
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
+      
+		</emulators>
 	</system>
 	<system>
 		<name>pspgo</name>
@@ -2450,6 +2454,7 @@ This file will be replaced on any new update of EmuELEC-->
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
+      
 		</emulators>
 	</system>
 	<system>
@@ -2464,11 +2469,43 @@ This file will be replaced on any new update of EmuELEC-->
 		<platform>psp</platform>
 		<theme>pspminis</theme>
 		<emulators>
-		<emulator name="PPSSPPSDLLZ">
+		<emulator name="PPSSPPSDLSPEED">
         <cores>
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
+      <emulator name="PPSSPPSDL4_6">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+      <emulator name="PPSSPPSDL4_6UMBER">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+      <emulator name="PPSSPPSDLSPEED">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+      		<emulator name="PPSSPPSDL">
+				<cores>
+					<core default="true">PPSSPPSDL</core>
+				</cores>
+			</emulator>
+			<emulator name="ppsspp">
+				<cores>
+					<core>ppsspp</core>
+					<core>ppssppsa</core>
+				</cores>
+			</emulator>
+			<emulator name="ppssppsa">
+				<cores>
+					<core>ppsspp</core>
+					<core>ppssppsa</core>
+				</cores>
+			</emulator>
 			
 		</emulators>
 	</system>
