--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -2414,6 +2414,16 @@ This file will be replaced on any new update of EmuELEC-->
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
+      <emulator name="PPSSPPSDLX">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+      <emulator name="PPSSPPSDL">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
       		
 		</emulators>
 	</system>
