--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -2409,7 +2409,7 @@ This file will be replaced on any new update of EmuELEC-->
 		<platform>psp</platform>
 		<theme>psp</theme>
 		<emulators>
-                  <emulator name="PPSSPPSDLLZ">
+                  <emulator name="PPSSPPSDLX2">
         <cores>
           <core default="true">PPSSPPSDL</core>
         </cores>
@@ -2419,13 +2419,17 @@ This file will be replaced on any new update of EmuELEC-->
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
-      <emulator name="PPSSPPSDL">
+      <emulator name="PPSSPPSDLLZ">
         <cores>
           <core default="true">PPSSPPSDL</core>
         </cores>
       </emulator>
-      		
-		</emulators>
+       <emulator name="PPSSPPSDL">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+	</emulators>
 	</system>
 	<system>
 		<name>pspcrashhd</name>
