--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -55,7 +55,7 @@ This file will be replaced on any new update of EmuELEC-->
 		<name>arcade</name>
 		<fullname>Arcade</fullname>
 		<manufacturer>Arcade</manufacturer>
-		<hardware>arcade</hardware>
+		<hardware>Arcade</hardware>
 		<path>/storage/roms/arcade</path>
 		<extension>.zip .ZIP .7z .7Z .cmd</extension>
 		<command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
@@ -98,7 +98,7 @@ This file will be replaced on any new update of EmuELEC-->
 		<name>mk</name>
 		<fullname>Mortal kombat</fullname>
 		<manufacturer>Arcade</manufacturer>
-		<hardware>arcade</hardware>
+		<hardware>Arcade</hardware>
 		<path>/storage/roms/mk</path>
 		<extension>.zip .ZIP .7z .7Z .cmd</extension>
 		<command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
@@ -141,12 +141,12 @@ This file will be replaced on any new update of EmuELEC-->
 		<name>street</name>
 		<fullname>Street Figther</fullname>
 		<manufacturer>Arcade</manufacturer>
-		<hardware>arcade</hardware>
-		<path>/storage/roms/arcade</path>
+		<hardware>Arcade</hardware>
+		<path>/storage/roms/street</path>
 		<extension>.zip .ZIP .7z .7Z .cmd</extension>
 		<command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>arcade</platform>
-		<theme>arcade</theme>
+		<theme>street</theme>
 		<emulators>
 			<emulator name="AdvanceMame">
 				<cores>
@@ -182,10 +182,10 @@ This file will be replaced on any new update of EmuELEC-->
 	</system>
 	<system>
 		<name>btmups</name>
-		<fullname>BTMUPS Brigad de Rua</fullname>
+		<fullname>BTMUPS Briga de Rua</fullname>
 		<manufacturer>Arcade</manufacturer>
-		<hardware>arcade</hardware>
-		<path>/storage/roms/arcade</path>
+		<hardware>Arcade</hardware>
+		<path>/storage/roms/btmups</path>
 		<extension>.zip .ZIP .7z .7Z .cmd</extension>
 		<command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>arcade</platform>
@@ -270,7 +270,7 @@ This file will be replaced on any new update of EmuELEC-->
 		<name>mame</name>
 		<fullname>Arcade MAME</fullname>
 		<manufacturer>Arcade</manufacturer>
-		<hardware>arcade</hardware>
+		<hardware>Arcade</hardware>
 		<path>/storage/roms/mame</path>
 		<extension>.7z .7Z .zip .ZIP .cmd</extension>
 		<command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
@@ -564,7 +564,7 @@ This file will be replaced on any new update of EmuELEC-->
 	<system>
 		<name>cps1</name>
 		<fullname>Capcom PlaySystem 1</fullname>
-		<manufacturer>Capcom</manufacturer>
+		<manufacturer>Arcade</manufacturer>
 		<release>1988</release>
 		<hardware>arcade</hardware>
 		<path>/storage/roms/cps1</path>
@@ -583,7 +583,44 @@ This file will be replaced on any new update of EmuELEC-->
 					<core>mame2003_plus</core>
 					<core>mame2010</core>
 					<core default="true">fbneo</core>
+                                        <core>fbne2</core>
+                                        <core>fbalpha</core>
+                                        <core>fbalpha2012</core>
+                                        <core>fbalpha2013</core>
+                                        <core>fbalpha2019</core>
+				</cores>
+			</emulator>
+			<emulator name="FBNEOSA">
+				<cores>
+					<core default="true">FbneoSA</core>
+				</cores>
+			</emulator>
+		</emulators>
+	</system>
+	<system>
+		<name>cps</name>
+		<fullname>Capcom PlaySystem 1</fullname>
+		<manufacturer>Arcade</manufacturer>
+		<release>1988</release>
+		<hardware>arcade</hardware>
+		<path>/storage/roms/cps</path>
+		<extension>.zip .ZIP .7z .7Z</extension>
+		<command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>arcade</platform>
+		<theme>cps</theme>
+		<emulators>
+			<emulator name="AdvanceMame">
+				<cores>
+					<core>AdvanceMame</core>
+				</cores>
+			</emulator>
+			<emulator name="libretro">
+				<cores>
+					<core>mame2003_plus</core>
+					<core>mame2010</core>
+					<core default="true">fbneo</core>
 					<core>fbalpha2012</core>
+					<core>fbalpha2017</core>
 					<core>mame2016</core>
 				</cores>
 			</emulator>
@@ -597,7 +634,7 @@ This file will be replaced on any new update of EmuELEC-->
 	<system>
 		<name>cps2</name>
 		<fullname>Capcom PlaySystem 2</fullname>
-		<manufacturer>Capcom</manufacturer>
+		<manufacturer>Arcade</manufacturer>
 		<release>1993</release>
 		<hardware>arcade</hardware>
 		<path>/storage/roms/cps2</path>
@@ -630,7 +667,7 @@ This file will be replaced on any new update of EmuELEC-->
 	<system>
 		<name>cps3</name>
 		<fullname>Capcom PlaySystem 3</fullname>
-		<manufacturer>Capcom</manufacturer>
+		<manufacturer>Arcade</manufacturer>
 		<release>1996</release>
 		<hardware>arcade</hardware>
 		<path>/storage/roms/cps3</path>
@@ -2410,6 +2447,16 @@ This file will be replaced on any new update of EmuELEC-->
 		<theme>psp</theme>
 		<emulators>
                   <emulator name="PPSSPPSDLLZ">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+      <emulator name="PPSSPPSDLX">
+        <cores>
+          <core default="true">PPSSPPSDL</core>
+        </cores>
+      </emulator>
+      <emulator name="PPSSPPSDL">
         <cores>
           <core default="true">PPSSPPSDL</core>
         </cores>
