--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -2434,6 +2434,25 @@ This file will be replaced on any new update of EmuELEC-->
 			</emulator>
 		</emulators>
 	</system>
+ <system>
+		<name>ps2</name>
+		<fullname>PlayStation 2</fullname>
+		<manufacturer>Sony</manufacturer>
+		<release>2000</release>
+		<hardware>console</hardware>
+		<path>/storage/roms/ps2</path>
+		<extension>.iso .mdf .nrg .bin .img .dump .gz .cso .chd</extension>
+		<command>/usr/bin/runemu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>ps2</platform>
+		<theme>ps2</theme>
+		<emulators>
+			<emulator name="aethersx2">
+				<cores>
+					<core default="true">aethersx2-sa</core>
+				</cores>
+			</emulator>
+		</emulators>
+	</system>
 	<system>
 		<name>psp</name>
 		<fullname>Sony Playstation Portable</fullname>
